--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:lines="1"
-        android:text="User Added Succesfully"
         android:textColor="@color/green"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -42,9 +41,8 @@
         android:id="@+id/tvAddedUsers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
-        android:text="38"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@id/viewRedDot"
@@ -64,9 +62,8 @@
         android:id="@+id/tvRemovedUsers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
-        android:text="382"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,13 +74,14 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/et_white_rounded_corners"
         android:hint="@string/first_name"
+        android:inputType="text"
         android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tvStatusInfo" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etLastName"
@@ -93,6 +91,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/et_white_rounded_corners"
         android:hint="@string/last_name"
+        android:inputType="text"
         android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,6 +105,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/et_white_rounded_corners"
         android:hint="@string/age"
+        android:inputType="number"
         android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +119,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/et_white_rounded_corners"
         android:hint="@string/email"
+        android:inputType="textEmailAddress"
         android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
