--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#777E90</color>
+
+    <color name="pending">#CF6212</color>
+    <color name="delivered">#009254</color>
+    <color name="canceled">#C50000</color>
+
+    <color name="order_list_item_stroke">#F9F9F9</color>
 </resources>
