--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <!--Message Bubbles-->
+    <color name="message_self_bubble">#E6E8EC</color>
+    <color name="message_partner_bubble">#F4F5F6</color>
+    
 </resources>
