--- a/app/src/main/res/layout/message_partner_view_holder.xml
+++ b/app/src/main/res/layout/message_partner_view_holder.xml
@@ -8,17 +8,17 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toStartOf="@id/msgBubbleAccessory"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="60dp"
+        app:layout_constraintStart_toEndOf="@id/msgBubbleAccessory"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvMessageBody"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:background="@drawable/message_self_background"
+            android:layout_gravity="start"
+            android:background="@drawable/message_partner_background"
             android:paddingHorizontal="20dp"
             android:paddingVertical="15dp" />
 
@@ -28,20 +28,20 @@
         android:id="@+id/msgBubbleAccessory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@id/frameLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/message_self_accessory" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/message_partner_accessory" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTimestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="29dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="29dp"
         android:textColor="@color/black_25"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/frameLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
