--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,12 +11,16 @@
         android:label="fragment_my_orders"
         tools:layout="@layout/fragment_my_orders" >
         <action
-            android:id="@+id/action_myOrdersFragment_to_writeFeedbackFragment"
-            app:destination="@id/writeFeedbackFragment" />
+            android:id="@+id/action_myOrdersFragment_to_myOrdersRecyclerViewFragment"
+            app:destination="@id/myOrdersRecyclerViewFragment" />
     </fragment>
     <fragment
-        android:id="@+id/writeFeedbackFragment"
-        android:name="com.perullheim.homework.view.feedback.WriteFeedbackFragment"
-        android:label="fragment_write_feedback"
-        tools:layout="@layout/fragment_write_feedback" />
+        android:id="@+id/myOrdersRecyclerViewFragment"
+        android:name="com.perullheim.homework.view.my_orders.MyOrdersRecyclerViewFragment"
+        android:label="fragment_my_orders_recycler_view"
+        tools:layout="@layout/fragment_my_orders_recycler_view" >
+        <argument
+            android:name="filterType"
+            app:argType="com.perullheim.homework.model.DeliveryStatus" />
+    </fragment>
 </navigation>
