--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -60,17 +60,18 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="40dp"
         android:textColorHint="@color/brand_primary_30"
+        app:hintEnabled="false"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/brand_primary_70">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:background="@drawable/capsule_secondary_background"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="40dp"
