--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,16 +27,16 @@
         app:srcCompat="@drawable/art_main_login" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etUsername"
+        android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/capsule_secondary_background"
-        android:drawableStart="@drawable/ic_user"
+        android:drawableStart="@drawable/ic_email"
         android:drawablePadding="40dp"
-        android:hint="@string/username"
-        android:inputType="text"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
         android:paddingStart="32dp"
         android:paddingEnd="16dp"
         android:textColorHint="@color/brand_primary_30"
@@ -48,6 +48,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="40dp"
         android:textColorHint="@color/brand_primary_30"
+        app:hintEnabled="false"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/brand_primary_70">
 
@@ -67,7 +68,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="32dp"
