--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -42,22 +42,6 @@
         android:textColorHint="@color/brand_primary_30"
         android:textSize="24sp" />
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etUsername"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/capsule_secondary_background"
-        android:drawableStart="@drawable/ic_user"
-        android:drawablePadding="40dp"
-        android:hint="@string/username"
-        android:inputType="text"
-        android:paddingStart="32dp"
-        android:paddingEnd="16dp"
-        android:textColorHint="@color/brand_primary_30"
-        android:textSize="24sp" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -94,5 +78,14 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="23sp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvToLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/already_have_an_account"
+        android:textColor="@color/brand_primary_70"
+        android:textSize="16sp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
