--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="main_background">#FFF5F5F5</color>
+
+    <color name="gray">#8E8E93</color>
+    <color name="green">#32D74B</color>
 </resources>
