--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ui.profile.ProfileFragment">
+    tools:context=".presentation.profile.ProfileFragment">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogOut"
