Authentication & Basic Paging w/ Caching

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".presentation.register.RegisterFragment">
+    tools:context=".presentation.auth.register.RegisterFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvRegisterTitle"
