--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="320dp"
-    tools:context=".presentation.accounts.AccountsFragment">
+    tools:context=".presentation.screen.accounts.AccountsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAccounts"
