--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,16 +7,24 @@
 
     <fragment
         android:id="@+id/paymentFragment"
-        android:name="com.perullheim.homework.presentation.payment.PaymentFragment"
+        android:name="com.perullheim.homework.presentation.screen.payment.PaymentFragment"
         android:label="fragment_payment"
         tools:layout="@layout/fragment_payment" >
         <action
             android:id="@+id/payment_to_accounts"
             app:destination="@id/accountsFragment" />
+        <action
+            android:id="@+id/payment_to_findAccount"
+            app:destination="@id/findAccountFragment" />
     </fragment>
     <dialog
         android:id="@+id/accountsFragment"
-        android:name="com.perullheim.homework.presentation.accounts.AccountsFragment"
+        android:name="com.perullheim.homework.presentation.screen.accounts.AccountsFragment"
         android:label="fragment_accounts"
         tools:layout="@layout/fragment_accounts" />
+    <dialog
+        android:id="@+id/findAccountFragment"
+        android:name="com.perullheim.homework.presentation.screen.find.FindAccountFragment"
+        android:label="fragment_find_account"
+        tools:layout="@layout/fragment_find_account" />
 </navigation>
