--- a/app/src/main/res/layout/fragment_find_account.xml
+++ b/app/src/main/res/layout/fragment_find_account.xml
@@ -5,13 +5,20 @@
     android:layout_height="320dp"
     android:gravity="center"
     android:orientation="vertical"
+    android:padding="32dp"
     tools:context=".presentation.screen.find.FindAccountFragment">
+
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinnerPaymentOptions"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        style="@style/Widget.AppCompat.Spinner.Underlined"/>
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etAccountNumber"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_margin="32dp"
+        android:layout_marginVertical="32dp"
         android:hint="@string/find_account_to_pay" />
 
     <androidx.appcompat.widget.AppCompatButton
