--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
-    <color name="brown">#735849</color>
-    <color name="blue_grey">#627789</color>
-
-    <color name="brand_black">#36383E</color>
-    <color name="brand_white">#FAFAFA</color>
-
-    <color name="main_background">#181A1F</color>
-    <color name="order_item_background">#202229</color>
-    <color name="separator_line">#CCCCCC</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
